--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,13 +19,30 @@
   --color-logo-STUDIO: #000000;
   --main-background-color: #e5e5e5;
   --secondary-background-color: #f5f4fa;
-  --hero-footer-background-color: #2F303A;
+  --hero-footer-background-color: #2f303a;
+  --button-hover-color: #188ce8;
 }
 
 body {
   font-family: "Roboto", sans-serif;
   color: var(--main-color);
   background-color: var(--secondary-background-color);
+  font-size: 14px;
+  letter-spacing: 0.03em;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .list {
@@ -37,6 +54,12 @@ body {
 .logo {
   font-family: "Raleway", sans-serif;
   color: var(--accent-blue);
+  text-decoration: none;
+
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
 }
 
 .header-logo-studio {
@@ -47,6 +70,10 @@ body {
 
 .site-nav .link {
   color: var(--main-color);
+  text-decoration: none;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .site-nav .link:hover,
@@ -56,46 +83,56 @@ body {
 
 /* Auth-nav */
 
-.auth-nav {
-    color: var(--color-mail-phone);
-}
-
 .auth-nav .link {
   color: var(--secondary-color);
+  text-decoration: none;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .auth-nav .link:hover,
 .auth-nav .link:focus {
   color: var(--accent-blue);
+}
 
 /* Hero */
 
-.section-hero {
-
-}
-
 .hero {
-  background-color: var(--hero-footer-background-color)
+  background-color: var(--hero-footer-background-color);
 }
 
 .hero-title {
   color: var(--white-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
 }
 
 /* Section */
 
 .section-title {
   color: var(--main-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
 }
 
 /* Features */
 
 .feature-list .title {
   color: var(--main-color);
+  font-weight: 700;
+  line-height: 0.88;
+  text-transform: uppercase;
 }
 
 .feature-list .text {
   color: var(--secondary-color);
+  line-height: 1.71;
 }
 
 /* Work */
@@ -104,10 +141,15 @@ body {
 
 .name {
   color: var(--main-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
 }
 
 .position {
   color: var(--secondary-color);
+  font-size: 16px;
+  line-height: 1.19;
 }
 
 /* Footer */
@@ -122,22 +164,69 @@ body {
 
 .footer-address {
   color: var(--white-color);
+  font-family: Roboto;
+  font-style: normal;
+  line-height: 1.71;
 }
 
 .contacts-list {
   color: var(--color-mail-phone);
+  text-decoration: none;
 }
 
 /* Button */
 
 .button {
+  font-family: inherit;
+  border: solid 0px;
+  font-size: 16px;
+  border-radius: 4px;
 }
 
 .button.primary {
-  background-color: var(--accent-blue);
   color: var(--white-color);
+  background-color: var(--accent-blue);
+  font-weight: 700;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+
+  width: 200px;
+  height: 50px;
 }
+
+.button.primary:hover,
+.button.primary:focus {
+  background-color: var(--button-hover-color);
+}
+
+/* Button portfolio */
 
 .button.secondary {
+  color: var(--main-color);
+  background-color: var(--secondary-background-color);
+
+  font-weight: 500;
+  line-height: 1.62;
 }
 
+.button.secondary:hover,
+.button.secondary:focus {
+  color: var(--white-color);
+  background-color: var(--accent-blue);
+}
+
+/* PORTFOLIO */
+
+.project-name {
+  color: var(--main-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.project-title {
+  color: var(--secondary-color);
+  font-size: 16px;
+  line-height: 1.87;
+}
