--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -112,6 +112,20 @@ body {
   text-transform: uppercase;
 }
 
+/* Features */
+
+.feature-list .title {
+  font-weight: 700;
+  line-height: 1.14;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
+.feature-list .text {
+  color: var(--secondary-color);
+  line-height: 1.71;
+}
+
 /* Section */
 
 .section-title {
@@ -120,20 +134,6 @@ body {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-}
-
-/* Features */
-
-.feature-list .title {
-  color: var(--main-color);
-  font-weight: 700;
-  line-height: 1.14;
-  text-transform: uppercase;
-}
-
-.feature-list .text {
-  color: var(--secondary-color);
-  line-height: 1.71;
 }
 
 /* Work */
